--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "axios": "^0.18.0",
     "better-scroll": "^1.15.1",
     "lib-flexible": "^0.3.2",
+    "mockjs": "^1.0.1-beta3",
     "px2rem-loader": "^0.1.9",
     "swiper": "^4.5.0",
     "vue": "^2.5.2",
+    "vue-lazyload": "^1.2.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.0"
   },
